--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-cplex==12.10.0.3
-docplex==2.19.202
-pandas==1.3.5
-numpy==1.21.6
-mypy==1.4.1
-loguru==0.7.2
-plotly==5.18.0
-matplotlib==3.5.3
-ipykernel==6.16.2
-pytest==7.4.4
-networkx==2.6.3
+mip
+pandas
+numpy
+mypy
+loguru
+plotly
+matplotlib
+pytest
+networkx
